<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <parent>
        <groupId>org.matsim</groupId>
        <artifactId>matsim-all</artifactId>
        <version>2026.0-PR4395</version>
    </parent>

    <modelVersion>4.0.0</modelVersion>
    <artifactId>railsim-experiments</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <name>Railsim Experiments</name>
    <description>Railsim Experiments</description>

    <properties>

        <!-- Don't change version here, but in the parent section above! -->
        <matsim.version>${project.parent.version}</matsim.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.release>21</maven.compiler.release>
    </properties>

    <repositories>
        <!--Note that in general repositories are not transitive, so they need to be repeated at every level where needed.-->
        <repository>
            <!-- Geotools is not on Maven central -->
            <id>osgeo</id>
            <name>Geotools repository</name>
            <!-- <url>http://download.osgeo.org/webdav/geotools</url> -->
            <url>https://repo.osgeo.org/repository/release/</url>
        </repository>
        <repository>
            <!-- Repository for MATSim (MATSim is not on Maven central, releases and snapshots) -->
            <id>matsim</id>
            <url>https://repo.matsim.org/repository/matsim</url>
        </repository>
        <!-- for dependencies of osm-network-reader -->
        <repository>
            <id>topobyte</id>
            <url>https://mvn.topobyte.de</url>
        </repository>
        <!-- for dependencies of osm-network-reader -->
        <repository>
            <id>slimjars</id>
            <url>https://mvn.slimjars.com</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <!-- This is the matsim "core": -->
            <groupId>org.matsim</groupId>
            <artifactId>matsim</artifactId>
            <version>${matsim.version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <!--MATSim test infrastructure.  Not transitive.-->
            <groupId>org.matsim</groupId>
            <artifactId>matsim</artifactId>
            <type>test-jar</type>
            <version>${matsim.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>ch.sbb.matsim.contrib</groupId>
            <artifactId>railsim</artifactId>
            <version>${matsim.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.38</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <!-- This plugin makes source files and javadocs available inside eclipse.  In IntelliJ, this works without plugin.-->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-eclipse-plugin</artifactId>
                <version>2.10</version>
                <configuration>
                    <downloadSources>true</downloadSources>
                    <downloadJavadocs>true</downloadJavadocs>
                </configuration>
            </plugin>
            <plugin>
                <!--				The maven-shade-plugin replaces the maven-assembly-plugin to configure "mvn package". The assembly-plugin regularly-->
                <!--				creates problems when GeoTools are used, which the shade-plugin does not (see-->
                <!--				https://stackoverflow.com/questions/27429097/geotools-cannot-find-hsql-epsg-db-throws-error-nosuchauthoritycodeexception/27431381#27431381)-->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <outputFile>${project.basedir}/${project.build.finalName}.jar</outputFile>
                            <transformers>
                                <!-- The following sets the main class for the executable jar as you otherwise would with the assembly plugin -->
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Main-Class>org.matsim.gui.MATSimGUI</Main-Class>
                                        <Specification-Vendor>org.matsim</Specification-Vendor>
                                        <Implementation-Vendor>org.matsim</Implementation-Vendor>
                                        <Implementation-Version>${project.version}</Implementation-Version>
                                    </manifestEntries>
                                </transformer>
                                <!-- The following merges the various GeoTools META-INF/services files         -->
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                            </transformers>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.RSA</exclude>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <mainClass>org.matsim.project.RunRailsimScenario</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
